--- a/fishpet/fishpet.vcxproj.filters
+++ b/fishpet/fishpet.vcxproj.filters
@@ -35,9 +35,6 @@
     </Midl>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="_IPetEvents_CP.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="App.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -52,6 +49,9 @@
     </ClInclude>
     <ClInclude Include="fishpet.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="_IPetEvents_CP.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -74,5 +74,6 @@
     <None Include="Pet.rgs">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include=".editorconfig" />
   </ItemGroup>
 </Project>
